--- a/content/resources/mit18_650f16_glm.md
+++ b/content/resources/mit18_650f16_glm.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture 10 Generalized Linear Models
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/dff89368051a5feae72b39c6422d0752_MIT18_650F16_GLM.pdf
 file_type: application/pdf
+parent_uid: 83f9dd4c-6461-4557-15ae-ef55103db1f9
 resourcetype: Document
 title: '18.650 (F16) Lecture 10: Generalized Linear Models (GLMs)'
 uid: dff89368-051a-5fea-e72b-39c6422d0752
