--- a/content/resources/mit18_650f16_pca.md
+++ b/content/resources/mit18_650f16_pca.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture 9 Principal Component Analysis
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/d85e1a9d113142ade8ce5e4f5ef0b4e8_MIT18_650F16_PCA.pdf
 file_type: application/pdf
+parent_uid: 83f9dd4c-6461-4557-15ae-ef55103db1f9
 resourcetype: Document
 title: '18.650 (F16) Lecture 9: Principal Component Analysis (PCA)'
 uid: d85e1a9d-1131-42ad-e8ce-5e4f5ef0b4e8
