--- a/content/resources/mit18_650f16_pset10.md
+++ b/content/resources/mit18_650f16_pset10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem Set 10
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/ff133adcf6955bcaefcec1ea49014008_MIT18_650F16_PSet10.pdf
 file_type: application/pdf
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 10
 uid: ff133adc-f695-5bca-efce-c1ea49014008
