--- a/content/resources/mit18_650f16_pset2.md
+++ b/content/resources/mit18_650f16_pset2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem Set 2
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/680f2b6e1bd22ea4ce020accf752cbe9_MIT18_650F16_PSet2.pdf
 file_type: application/pdf
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 2
 uid: 680f2b6e-1bd2-2ea4-ce02-0accf752cbe9
