--- a/content/resources/mit18_650f16_pset5.md
+++ b/content/resources/mit18_650f16_pset5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem Set 5
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/fc95ad9117580c46a8fddce6df5fb1ec_MIT18_650F16_PSet5.pdf
 file_type: application/pdf
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 5
 uid: fc95ad91-1758-0c46-a8fd-dce6df5fb1ec
