--- a/content/resources/mit18_650f16_pset7.md
+++ b/content/resources/mit18_650f16_pset7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem Set 7
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/dafe3795ed1e6a083f29a138da5538ce_MIT18_650F16_PSet7.pdf
 file_type: application/pdf
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 7
 uid: dafe3795-ed1e-6a08-3f29-a138da5538ce
