--- a/content/resources/mit18_650f16_pset8.md
+++ b/content/resources/mit18_650f16_pset8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem Set 8
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-650-statistics-for-applications-fall-2016/52217defe4460b1755eb581c2fe41133_MIT18_650F16_PSet8.pdf
 file_type: application/pdf
+parent_uid: 19ae26e0-d02b-2a15-b25f-79987b5fbfbe
 resourcetype: Document
 title: 18.650 (F16) Problem Set 8
 uid: 52217def-e446-0b17-55eb-581c2fe41133
